# cgel-plugin

./: .gitignore  ARCHITECT.md  CLAUDE.md  README.md  ROADMAP.md  SECURITY.md  pytest.ini
.claude-plugin/: marketplace.json  plugin.json
commands/: task.md
deck-master/: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
deck-master/.claude-plugin/: plugin.json
deck-master/commands/: deck.md
deck-master/examples/: pipeline_deck.json  pipeline_deck.py
deck-master/skills/deck/: SKILL.md
deck-master/skills/deck-master/: SKILL.md
deck-master/skills/deck-master/references/: anti-slop.md  audit.md  visual-system.md
deck-master/skills/deck/references/: slide-idioms.md
deck-master/src/deckmaster/: audit.py  cli.py  layout.py  loader.py  model.py  scene.py  theme.py  typography.py  units.py
deck-master/src/deckmaster/data/: arial_metrics.json
deck-master/src/deckmaster/serialize/: pptx.py
deck-master/src/deckmaster/text/: _build_metrics.py  metrics.py
deck-master/src/deckmaster/validate/: opc.py
deck-master/tests/: conftest.py
deck-master/tests/golden/: pipeline_deck.sha256
deck-master/tests/integration/: test_audit.py  test_determinism.py  test_opens.py  test_package.py
deck-master/tests/schemas/: NOTICE  README.md  SHA256SUMS
deck-master/tests/unit/: test_cli.py  test_emission.py  test_layout.py  test_loader.py  test_metrics.py  test_model.py  test_skill_docs.py  test_standalone.py  test_theme.py
deck-master/tools/: preview.py
hooks/: hooks.json
schemas/: evidence.schema.json  task-contract.schema.json
tests/: test_cli.py  (+24 more)
(+31 files in other folders)
